--- a/public/assets/css/rh.css
+++ b/public/assets/css/rh.css
@@ -1,7 +1,7 @@
 #menu-verticale {
     background-color: #ffffff !important;
     width: 300px;
-    height: 100%;
+    height: 70rem;
     padding: 10px;
     border-radius: 10px;
 }
@@ -26,9 +26,47 @@
     color: white;
 }
 
-#menu-content{
+#menu-content {
     background-color: #ffffff;
     flex-grow: 1;
     border-radius: 10px;
     padding: 20px;
 }
+
+.element-dash, .anomalie {
+    cursor: pointer;
+    transition: all 1s;
+}
+
+.element-dash:hover, .anomalie:hover {
+    background-color: #00000028;
+}
+
+.danger {
+    background-color: red;
+    color: #ffffff;
+    font-weight: bold;
+    border-radius: 5px;
+    height: max-content;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 20px 5px 20px;
+    margin: 20px;
+}
+
+.warning {
+    background-color: orange;
+    color: #ffffff;
+    font-weight: bold;
+    border-radius: 5px;
+    height: max-content;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 20px 5px 20px;
+    margin: 20px;
+}
+
