--- a/public/assets/css/rh.css
+++ b/public/assets/css/rh.css
@@ -1,7 +1,7 @@
 #menu-verticale {
     background-color: #ffffff !important;
     width: 300px;
-    height: 73rem;
+    height: 73em;
     padding: 10px;
     border-radius: 10px;
 }
