--- a/templates/manager/manager.html.twig
+++ b/templates/manager/manager.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}RH{% endblock %}
+{% block title %}Manager{% endblock %}
 
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('assets/css/rh.css') }}">
 {% endblock %}
 
 {% block body %}
-    {% set page = 'rh' %}
+    {% set page = 'manager' %}
     <nav id="content">
         <div id="app" data-page="{{ page }}"></div>
     </nav>
